# Robots_In_Context_Exercises

MiniProject1/headers/: PathFinder.hpp
MiniProject1/sources/: CMakeLists.txt  PathFinder.cpp  main.cpp  point.cpp
MiniProject2/: CMakeLists.txt  labyrinth.pgm
MiniProject2/headers/: Map.hpp  Planner.hpp  macros.hpp  point.hpp
MiniProject2/sources/: CMakeLists.txt  Image.cpp  Planner.cpp  main.cpp  point.cpp
Week1/: Bane2.pgm  CMakeLists.txt
Week1/headers/: Bug1.hpp  Bug2.hpp  Map.hpp  PPMLoader.hpp  PathFinder.hpp  point.hpp  vector2D.hpp
Week1/sources/: Bug1.cpp  Bug2.cpp  CMakeLists.txt  PPMLoader.cpp  PathFinder.cpp  point.cpp  readpgmtest.cpp  vector2D.cpp
headers/: point.hpp
sources/: Image.cpp  PathFinder.cpp
